third_party/move/move-compiler-v2/tests/reference-safety/v1-borrow-tests/imm_borrow_on_mut_invalid.exp

Diagnostics:
error: cannot mutably borrow field `x` of value which is already borrowed
   ┌─ tests/reference-safety/v1-borrow-tests/imm_borrow_on_mut_invalid.move:25:29
   │
24 │         let field_ref = set_and_pick(account, copy point_ref);
   │                         ------------------------------------- previously mutably borrowed here
25 │         let x_val = *freeze(&mut point_ref.x);
   │                             ^^^^^^^^^^^^^^^^ borrow attempted here
26 │         let returned_ref = bump_and_give(field_ref);
   │                            ------------------------ conflicting reference `field_ref` used here

error: cannot freeze value which is still mutably borrowed
   ┌─ tests/reference-safety/v1-borrow-tests/imm_borrow_on_mut_invalid.move:39:23
   │
38 │         let field_ref = set_and_pick(account, copy point_ref);
   │                         ------------------------------------- previously mutably borrowed here
39 │         let x_val = *&freeze(point_ref).x;
   │                       ^^^^^^^^^^^^^^^^^ frozen here
40 │         let returned_ref = bump_and_give(field_ref);
   │                            ------------------------ conflicting reference `field_ref` used here
